Fixed SO icon alignment

--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -91,6 +91,7 @@ ul#networks {
     width: 16px;
     height: auto;
     vertical-align: bottom;
+    margin-bottom:-7px;
   }
   li {
     float: left;
@@ -98,7 +99,7 @@ ul#networks {
     margin: 10px;
   }
   a {
-    //top: 2px;
+    top: 7px;
     position: relative;
   }
 }
